:construction: Include head.njk componant in index.njk

--- a/views/index.njk
+++ b/views/index.njk
@@ -1,6 +1,6 @@
 <html lang="EN" dir="auto" prefix="og: http://ogp.me/ns#">
   <head>
-
+    {% include 'include/head.njk' %}
   </head>
   <body>
     <meta itemprop="accessibilityFeature" content="largePrint/CSSEnabled">
