:construction: Include head and metatag componant in index.njk

--- a/views/index.njk
+++ b/views/index.njk
@@ -1,6 +1,7 @@
 <html lang="EN" dir="auto" prefix="og: http://ogp.me/ns#">
   <head>
-
+    {% include "./include/head.njk" %}
+    {% include "./include/metaTags.njk" %}
   </head>
   <body>
     <header id="site-header" class="container site-header" itemtype="https://schema.org/WPHeader" itemscope="itemscope">
