--- a/views/_includes/include/head.njk
+++ b/views/_includes/include/head.njk
@@ -4,3 +4,4 @@
 <meta name="theme-color" content="#fcbe03"/>
 <link rel="apple-touch-icon" href="/favicon/512.png">
 <link rel="icon" href="/favicon/512.png">
+<script defer type="module" src="/js/app.js"></script>
