:lipstick: Add border-radius to images

--- a/static/js/components/appListing.css
+++ b/static/js/components/appListing.css
@@ -1,3 +1,13 @@
 #app-listing {
-  li {}
+  li:nth-of-type(odd) {
+    img {
+      border-radius: 20px;
+    }
+  }
+
+  li:nth-of-type(even) {
+    img {
+      border-radius: 100px;
+    }
+  }
 }
