--- a/static/js/components/appListing.css
+++ b/static/js/components/appListing.css
@@ -1,27 +1,34 @@
-@import "normalize.css";
-
 #app-listing {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-row-gap: 10px;
 
-  li:nth-of-type(odd) {
-    img {
-      border-radius: 20px;
+  li {
+    display: flex;
+    align-items: center;
+
+    &:nth-of-type(odd) {
+      img {
+        border-radius: 20px;
+      }
     }
-  }
 
-  li:nth-of-type(even) {
-    img {
-      border-radius: 100px;
+    &:nth-of-type(even) {
+      img {
+        border-radius: 100px;
+      }
     }
   }
 
   h2 {
-    font-size: 40px;
+    font-size: clamp(25px, 1.5vw, 40px);
+    margin: 0;
   }
 
   img {
-    width: clamp(100px, 1.5vw, 200px);
+    width: clamp(50px, 1.5vw, 200px);
+    margin-right: 10px;
   }
 }
