:lipstick: Remove margin for genre-list

--- a/static/js/components/appListing.css
+++ b/static/js/components/appListing.css
@@ -23,7 +23,13 @@
   }
 
   .genre-list {
+    margin: 0;
+    padding: 0;
     display: flex;
+
+    li {
+      margin-right: 10px;
+    }
   }
 
   h2 {
