--- a/static/js/components/appRecommendation.css
+++ b/static/js/components/appRecommendation.css
@@ -5,5 +5,9 @@
   margin: 0;
   padding: 0;
   overflow-x: scroll;
-  scroll-snap-type: mandatory;
+  scroll-snap-type: x mandatory;
+
+  li {
+    scroll-snap-align: end;
+  }
 }
