--- a/static/js/components/appRecommendation.css
+++ b/static/js/components/appRecommendation.css
@@ -9,5 +9,19 @@
 
   li {
     scroll-snap-align: end;
+    display: flex;
+    flex: 0 0 100%;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+      margin: 0 0 15px;
+    }
+
+    img {
+      border-radius: 20px;
+      width: clamp(100px, 1.5vw, 400px);
+      margin-right: 10px;
+    }
   }
 }
