--- a/static/js/components/appListing.css
+++ b/static/js/components/appListing.css
@@ -14,7 +14,7 @@ $highlightColorTint: #CAD49D;
 
     li {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
 
       &:nth-of-type(odd) {
         img {
