--- a/views/_includes/include/head.njk
+++ b/views/_includes/include/head.njk
@@ -5,3 +5,4 @@
 <link rel="apple-touch-icon" href="/favicon/512.png">
 <link rel="icon" href="/favicon/512.png">
 <script defer type="module" src="/js/App.js"></script>
+<script defer type="module" src="/js/configPWA.js"></script>
